# sas-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  azure-pipelines.yml  config.ini  sascfg_personal.py  setup.cfg  setup.py  tox.ini
sas_cli/: __main__.py  _file_helpers.py  _main.py
testing/: test_logging.sas  test_program.sas  test_program_error.sas
tests/: conftest.py  test_main.py
