[metadata]
name = sas_cli
version = 1.0.0
description = Run a SAS program from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordanamos/sas-cli
author = Jordan Amos
author_email = jordan.amos@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = sas cli

[options]
packages = sas_cli
install_requires =
    numpy==1.23.5
    pandas==1.5.1
    python-dateutil==2.8.2
    pytz==2022.6
    saspy==4.4.0
    six==1.16.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    sas = sas_cli.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203
