[metadata]
name = sas_cli
version = 1.0.0
description = Run a SAS program from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordanamos/sas-cli
author = Jordan Amos
author_email = jordan.amos@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = sas cli

[options]
packages = sas_cli
install_requires =
    pandas==1.5.2
    saspy==4.4.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    sas = sas_cli.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
